# hot-or-not-web-leptos-ssr

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.preview  README.md  SENTRY_WASM_DEBUG.md  build-with-sourcemaps.sh  default.nix  flake.nix  fly.toml  generate-sourcemaps.sh  generate-wasm-sourcemaps.sh  insights.md  local-debug-build.sh  local-watch.sh  local.txt  package-lock.json  package.json  pnpm-lock.yaml  post-build-tree.txt  pre-build-tree.txt  prepare-sentry-wasm.sh  process-wasm-debug.sh  run-debug-server.sh  rust-toolchain.toml  rustc-ice-2025-07-14T13_51_02-58125.txt  rustc-ice-2025-07-14T13_51_02-58126.txt  rustc-ice-2025-07-14T13_52_16-58359.txt  rustc-ice-2025-07-14T13_52_16-58360.txt  rustc-ice-2025-07-14T13_53_17-58843.txt  rustc-ice-2025-07-14T13_53_17-58844.txt  rustc-ice-2025-07-14T13_59_04-60887.txt  rustc-ice-2025-07-14T13_59_04-60888.txt  sentry-upload.sh  test-jaeger.sh  todo.md  upload-to-sentry.sh
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit  pre-push
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  setup.nu  setup.sh
.devcontainer/ci-build/: devcontainer.json  setup.nu
.devcontainer/nix/: devcontainer.json
.github/workflows/: build-base-container-and-publish-to-ghcr-registry.yaml  build-check-limits-change.yml  build-check-prod.yml  build-check.yml  create-pr-on-limits-change.yml  deploy-preview.yml  deploy-staging.yml  deploy-to-production-on-limits-change.yml  deploy-to-production-on-merge-to-main.yaml  e2e-tests.yml  experimental-build-check.yml.bak  experimental-deploy-preview.yml.bak  prebuild-and-cache-devcontainer-on-merge-to-main.yml  server-setup-temp.yml  upload-secrets-to-vault.yml  upload_secrets.yml
deploy-baremetal/: Caddyfile  docker-compose.yaml
deploy-baremetal/fly-redis-proxy/: fly_redis_proxy.exp
postgres-migration/: Cargo.toml
postgres-migration/src/: lib.rs  main.rs
ssr/: Cargo.toml  tailwind.config.js
ssr/public/: firebase-messaging-sw.js
ssr/public/js/: intercom-init.js  persona-kyc.js  sentry-init.js
ssr/src/: app.rs  lib.rs  main.rs
ssr/src/app/: test.rs
ssr/src/auth/: Cargo.toml
ssr/src/auth/src/: lib.rs
ssr/src/auth/src/server_impl/: mod.rs  yral.rs
ssr/src/auth/src/server_impl/store/: dragonfly_kv.rs  mod.rs
ssr/src/component/: Cargo.toml
ssr/src/component/src/: action_btn.rs  back_btn.rs  base_route.rs  buttons.rs  connect.rs  content_upload.rs  dashbox.rs  feed_popup.rs  hn_icons.rs  infinite_scroller.rs  lib.rs  login_icons.rs  login_modal.rs  login_nudge_popup.rs  nav.rs  notification_display.rs  notification_nudge.rs  notification_toggle.rs  nsfw_nudge_popup.rs  overlay.rs  popup.rs  sentry_wasm_test.rs  share_popup.rs  social.rs  spinner.rs  start_kyc_button.rs  start_kyc_popup.rs  tooltip.rs  video_player.rs
ssr/src/component/src/auth_providers/: mod.rs  server_impl.rs  yral.rs
ssr/src/component/src/icons/: edit_icons.rs  mod.rs  sound_off_icon.rs  sound_on_icon.rs  telegram_icon.rs  volume_high_icon.rs  volume_mute_icon.rs
ssr/src/component/src/leaderboard/: api.rs  history_api.rs  history_card.rs  history_types.rs  mod.rs  pagination.rs  podium.rs  provider.rs  rank_badge.rs  search_bar.rs  table.rs  table_header.rs  tournament_completion_popup.rs  tournament_header.rs  tournament_provider.rs  types.rs
ssr/src/component/src/notification/: mod.rs  provider.rs
ssr/src/consts/: Cargo.toml
ssr/src/consts/src/: lib.rs  limits.rs  local.rs  remote.rs
ssr/src/init/: containers.rs  mod.rs
ssr/src/page/: Cargo.toml
ssr/src/page/src/: about_us.rs  consts.rs  internal.rs  leaderboard.rs  lib.rs  logout.rs  menu.rs  privacy.rs  root.rs  scrolling_post_view.rs  terms.rs  terms_android.rs  terms_ios.rs  test.rs  test_icrc_transfer.rs  test_place_bets.rs  test_sentry.rs  view_profile_redirect.rs  yral_auth_redirect.rs
ssr/src/page/src/approval/: api.rs  mod.rs  overlay.rs
ssr/src/page/src/daily_missions/: mission_state.rs  mod.rs
ssr/src/page/src/daily_missions/modals/: mission_modals.rs  mod.rs  universal_modal.rs
ssr/src/page/src/faq/: items.rs
ssr/src/page/src/hon/: mod.rs  withdrawal.rs
ssr/src/page/src/hon/withdrawal/: mod.rs
ssr/src/page/src/icpump/: ai.rs  mod.rs
ssr/src/page/src/internal/: clear_sats.rs
ssr/src/page/src/leaderboard/: current.rs  history.rs  mod.rs  no_active.rs  tournament.rs
ssr/src/page/src/notification/: mod.rs  provider.rs
ssr/src/page/src/notifs/: mod.rs
ssr/src/page/src/post_view/: bet.rs  mod.rs  overlay.rs  single_post.rs  video_iter.rs  video_loader.rs
ssr/src/page/src/profile/: mod.rs  posts.rs  profile_iter.rs  profile_post.rs  speculation.rs
ssr/src/page/src/pumpdump/: mod.rs  withdrawal.rs
ssr/src/page/src/refer_earn/: mod.rs
ssr/src/page/src/settings/: delete_user.rs  mod.rs
ssr/src/page/src/token/: icpump_sunset_popup.rs  info.rs  popups.rs  transfer.rs
ssr/src/page/src/upload/: ai.rs  ai_server.rs  cf_upload.rs  mod.rs  video_upload.rs
ssr/src/page/src/wallet/: airdrop.rs  mod.rs  tokens.rs  transactions.rs  txn.rs
ssr/src/state/: Cargo.toml
ssr/src/state/src/: admin_canisters.rs  alloydb.rs  app_state.rs  app_type.rs  audio_state.rs  canisters.rs  dolr_airdrop.rs  hn_bet_state.rs  kyc_state.rs  lib.rs  local_storage.rs  neon_postgres.rs  post_view_state.rs  stdb_dolr_airdrop.rs
ssr/src/utils/: Cargo.toml  build.rs
ssr/src/utils/src/: client_ip.rs  health.rs  host.rs  lib.rs  posts.rs  profile.rs  qstash.rs  report.rs  sentry_server_test.rs  storage.rs  timezone.rs  types.rs  user_delete.rs  videogen.rs  web.rs
ssr/src/utils/src/event_streaming/: events.rs  mod.rs
ssr/src/utils/src/mixpanel/: mixpanel_events.rs  mod.rs  state.rs
ssr/src/utils/src/ml_feed/: mod.rs
ssr/src/utils/src/notifications/: mod.rs  setup-firebase-messaging-inline.js
ssr/src/utils/src/stdb/: get_limits.rs
ssr/style/: input.css
telemetry_axum/: Cargo.toml
telemetry_axum/src/: lib.rs  make_span.rs  tracing.rs
tests/e2e/: nightwatch.conf.js  package-lock.json  pnpm-lock.yaml
tests/e2e/src/: menuTest.js  profileTest.js  walletTest.js
(+39 files in other folders)
